# QDD

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  define.h.in  diff.bat  install_pwteleman  inteloff  intelon  out  todo.txt
bench/: mkl.txt  resultats.ods
code/: .gitignore  telemanexec
code/Python_ASE/Na/: na.py  pwtelemandynr.py  pwtelemanscript.py
code/bench/: openmp.txt
code/bench/C2/: for005.C2  for005ion.C2~
code/bench/C2-ionmot/: for005  for005.C2-ionmot  for005ion.C2-ionmot~
code/bench/na8-ionmot/: for005.na8-ionmot
code/bench/na8-jel/: for005  for005.na8-jel
code/create_FFTW_wisdom/: create_wisdom.F90  define.h  fftw.F90  makefile
code/get_GPU_info/: cudainfo.cu
code/phangle/: for005.na8-cont  for005.na8-init  phangle.bat
code/source_aux/: alphamom.F90  analyze-MP.F90  angdist.F90  pr_geometry.F90  read_pes2.F90  spectr2.F90  testcoul.F90
code/source_f90/: 2stUT-oldies.F90  2stUT.F90  ALL_PREPROCESSOR_FLAGS.txt  HEeigensystem.f  Makefile  Makefile.am  Makefile.am.orig  Makefile.autodoub  Makefile.debug  Makefile.debug~  Makefile.in  Makefile.old  Mat.f90  README.tex  abso_bc.F90  afterburn.F90  alloc_cuda.F90  analyse.F90  angdist4.f90  attachement.F90  box.F90  carlo.F90  commenst.txt  comments.txt  coulex.F90  coulex.cu  coulex.fftw.F90  coulex.fftw3d.F90  coulex.fftwgpu.F90  coulex.fftwgpu3d.F90  coulex_real.fftw.F90  coulex_real.fftw3d.F90  coulexr.F90  coulomb.F90  coulsolv.F90  coulsolvr.F90  cuda.cu  cuda_alloc.F90  cuda_fortran.F90  cuda_old.cu  (+111 more)
code/source_f90/new/: define.mk  define_cuda.h  makefile  makefile~
code/source_py/: pwtelemandynr.py
code/source_py/utils/: pwtelemanscript.py  run
code/utils/: ccc_para_job  cleanpwteleman  jobcrihangpu.ll  jobpbs.pbs
create_wisdom/: create_wisdom.F90
doc/: .gitignore  FFT.txt  README  README~  RTA-params.tex  RTA-params.tex~  RTA-scheme2b.fig  RTA-updates.tgz  RTA.bbl  RTA.blg  RTA.tex  RTA.tex~  User_manual.preamble.tex  User_manual.tex  ase-pwteleman.txt  cluster.bib  explain-init.out  explain-init.tex  explain-namelist.tex  explain-namelist.tex~  gpu_explain.txt  modif_dev-pgr.txt  namelist.aux  namelist.out  namelist.tex  namelist.toc  notes.tex  notes.tex~  openmp_explain.txt  output_files.tex  question.tex  question.tex~  relaxtime.bib  relaxtime.bib~  sequences.txt  test_hamdiag.gnu  test_iterations.tex  unstable_iteration.gnu  xx  xx.tex  (+2 more)
examples/H2O/: for005.H2O-rta
examples/H2O/dynamic/: for005.H2O  for005ion.H2O
examples/H2O/static-ionmd/: for005.H2O  for005ion.H2O
examples/H2O/static-no_ionmd/: for005.H2O  for005ion.H2O
examples/Na8-ionmot/: dx  for005.na8-ionmot
examples/Na8-jel/: for005  for005.na8-jel  for005.na8-rta
get_GPU_info/: makefile
m4/: FL_CHECK_FFTW_LIBS.m4  FL_CHECK_MKL_LIBS.m4  FL_CHECK_MPIF_HEADER.m4  FL_CHECK_OS.m4  FL_LOCATE_CUDA.m4  FL_READ_DEF.m4  FL_READ_HEADER.m4
presentation/: pres.tex
samples/C2/: for005.C2  for005.C2~
samples/C2-ionmot/: for005.C2-ionmot  for005ion.C2-ionmot
samples/C2H6py/: C2H6.py  jobc2h6.pbs
samples/C2_128/: dx  for005.C2  periodic
samples/C2_48/: for005.C2
samples/C2_64/: for005.C2
samples/C2_96/: for005.C2  for005ion.C2
samples/H2O/: 2st-stat-conv-1.res  2st-stat-conv-2.res  Time  dx  energies.H2O-ads  energies.H2O-rsc  energies.H2O-sic  energies.H2O-ts2  energies.H2O-ts8  energies.H2O-tst  for005  for005.H2O-ads  for005.H2O-rsc  for005.H2O-rta  for005.H2O-sic  for005.H2O-ts2  for005.H2O-ts8  for005.H2O-tst  for006  for006.0H2O-ads  for006.0H2O-rsc  for006.0H2O-rta  for006.0H2O-sic  for006.0H2O-ts2  for006.0H2O-ts8  for006.0H2O-tst  for007  for007.1  for007.1b  for007.2  for007.8  for007.ads  for007.sic  for007.src  for007.src2  fort.2100  fort.2110  fort.2120  fort.2130  fort.2140  (+172 more)
samples/H2O/tmp/: 2st-stat-conv-1.res  2st-stat-conv-2.res  Time  energies.H2O-ts2  energies.H2O-tsf  for005  for005.H2O-ts2  for005.H2O-tsf  for005.H2O-tsf~  for005~  for006.0H2O-ts2  for006.0H2O-tsf  for007  for007.3  for007.8b  for007.fast  for007.slow  fort.2000  fort.2010  fort.2020  fort.2030  fort.2040  fort.2050  fort.2060  fort.2070  fort.2080  fort.2090  fort.2100  fort.2110  fort.2120  fort.2130  fort.2140  fort.2150  fort.2160  fort.2170  fort.2180  fort.2190  fort.2200  fort.2210  fort.2220  (+40 more)
samples/H2O/tmp2/: Time  energies.H2O-0ph  energies.H2O-1ph  for005  for005.H2O-0ph  for005.H2O-0ph~  for007  (+67 more)
samples/Na6_MgO/: Time  energies.Na6_MgO  for005  for005.Na6_MgO  for005.Na6_MgO~  for005ion.Na6_MgO  for005surf.Na6_MgO  for006.0Na6_MgO  infosp.Na6_MgO  pdip.Na6_MgO  penerclu.Na6_MgO  penergies.Na6_MgO  penergy.Na6_MgO  pescOrb.Na6_MgO  pescel.Na6_MgO  pforces.Na6_MgO  poptions.Na6_MgO  pposani.Na6_MgO  pposel.Na6_MgO  pproba.Na6_MgO  pspenergies.Na6_MgO  pspvariances.Na6_MgO  pspvariancesp.Na6_MgO  pstat.Na6_MgO
samples/Na8-ionmot/: dx  for005  for005.na8-ionmot  for005ion.na8-ionmot  na8.bs
samples/Na8-jel/: for005  for005.na8-jel  for005.na8-rta
samples/anilin/: anilin.xyz  for005.pwteleman  for005ion.pwteleman  nx
samples/na8-ionmot/: for005.na8-ionmot  na8.bs
samples/na8-jel/: for005.na8-jel
samples/phangle/: for005  na8-spin1.tgz
samples/porphyrin_mg/: for005.pwteleman  nx
samples_py/H2/: H2 .bs  dx  for005  for005.H2  for005ion.H2
samples_py/Na_ase/: na.py
samples_py/anilinfull/: anilin.py
samples_py/multiscale_na/: msoniom_na9.py
samples_py/porphyrin_mgfull/: dx  for005  for005.pwteleman  for005ion.pwteleman  goed.asci  pormg.py  pormg.xyz
src/auxiliary/: analyze-MP.F90  pr_geometry.F90  spectr2.F90
src/qdd/: 2stUT.F90  2st_util.F90  Makefile  abso_bc.F90  afterburn.F90  attachement.F90  box.F90  carlo.F90  comments.txt  coulex.F90  coulexr.F90  coulsolv.F90  coulsolvr.F90  dynamic.F90  expevol.F90  falr.F90  falr.fftw.F90  fft.F90  fft.fftw1d.F90  fftpack.F90  fftw.F90  fftw3.f03  forces.F90  functions.F90  givens.F90  glauber.F90  gridcoul.F90  image.F90  init.F90  ionmd.F90  kinetic.F90  lattice.F90  lda.F90  lda_para.F90  loc_mfield.F90  localize.F90  localize_rad.F90  locgoe.F90  main.F90  master_MPI.f90  (+19 more)
(+43 files in other folders)
